<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="chinese_checkers">Chinese Checkers</string>
	
	<string name="yes">Yes</string>
	<string name="ok">Ok</string>
	<string name="no">No</string>

	<string name="help">Help</string>
	<string name="preferences">Settings</string>

	<string name="back">Back</string>
	<string name="undo">Undo</string>
	<string name="undo_move">Undo last move</string>
	<string name="cancel">Cancel</string>

	<string name="menu">Menu</string>


	<string name="newnew">New</string>
	<string name="delete">Delete</string>



	<!-- dev -->
	<string name="play">Play!</string>
	<string name="resume">Resume</string>
	<string name="resume_game">Resume game</string>

	<string name="players">players</string>


	<string name="nb_players">Choose 2, 3 or 6 units...</string>
	<string name="human_vs_machine">Human or Machine?</string>
	
	<!-- app -->
	
	<string name="i_pass">I pass my turn</string>
	
	
	<string name="quit">Quit the game?</string>
	
		
	<string name="new_game">New game</string>
	<string name="congratulations">Congratulations, you win with score : </string>
	<string name="try_next">Try next level.</string>
	<string name="wins_with_score">wins with score</string>
	
	<string name="Red">Player Red</string>
	<string name="Green">Player Green</string>
	<string name="Blue">Player Blue</string>
	<string name="Orange">Player Orange</string>
	

    <!-- rate form -->
    
	<string name="rate">Rate app on Google Play?</string>
    
	<string name="enjoy_game">Maybe you enjoy the game...</string>
	<string name="rate_app">Do you agree to rate the app on Google Play?</string>
	
	<string name="now">OK</string>
	<string name="later">Later</string>
	<string name="never">No</string>
	
	
	<string name="i_like_it">I like it</string>
	
	<!-- game over and player over messages-->
	<string name="ranking">Ranking</string>
	<string name="game_over">Game over</string>
	
	<string name="skip_demo">Touch screen to skip demo...</string>
	
</resources>
