<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
		<ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/chinese_checkers_512"
			    android:layout_width="256dp"
			    android:layout_height="256dp" 
			    android:contentDescription="@string/chinese_checkers"
			    android:layout_gravity="center_horizontal"
			    android:layout_margin="10dp"
		        />
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearance"
		    android:text="@string/enjoy_game"
		    android:gravity="center_horizontal"
		    android:layout_margin="10dp"
		    />
	    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
		    android:textAppearance="?android:attr/textAppearance"
		    android:text="@string/rate_app"
		    android:gravity="center_horizontal"
		    android:layout_margin="10dp"
		    />
		
		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/rate"
		    android:orientation="horizontal"
		    android:layout_gravity="center_horizontal"
		    android:layout_margin="10dp"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/btn_rating_star_on_pressed_holo_light"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:contentDescription="@string/rate"
		        />
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/btn_rating_star_on_pressed_holo_light"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:contentDescription="@string/rate"
		        />
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/btn_rating_star_on_pressed_holo_light"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:contentDescription="@string/rate"
		        />
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/btn_rating_star_on_pressed_holo_light"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:contentDescription="@string/rate"
		        />
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:src="@drawable/btn_rating_star_on_pressed_holo_light"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:contentDescription="@string/rate"
		        />
		    		    	    	    		    		    
	    </LinearLayout>

		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
			    android:layout_margin="10dp"
		    >
		    <Button 
			    android:id="@+id/yes"
		        android:layout_width="0dp" 
		        android:layout_height="wrap_content"
			    android:textAppearance="?android:attr/textAppearance"
			    android:text="@string/yes"
			    android:gravity="center_horizontal"
			    android:layout_weight="1"
			    android:layout_margin="20dp"
			    />
		    <Button 
			    android:id="@+id/later"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
			    android:textAppearance="?android:attr/textAppearance"
			    android:text="@string/later"
			    android:gravity="center_horizontal"
			    android:layout_weight="1"
			    android:layout_margin="20dp"
		        />		    
		    <Button 
			    android:id="@+id/no"
			    android:layout_width="0dp"
		        android:layout_height="wrap_content"
			    android:textAppearance="?android:attr/textAppearance"
			    android:text="@string/no"
			    android:gravity="center_horizontal"
			    android:layout_weight="1"
			    android:layout_margin="20dp"
		        />		    
		</LinearLayout>	    	    
	    	
	</LinearLayout>
</ScrollView>
	