<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@layout/linear_gradient"
    >
    <LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:layout_weight="1"
	    >
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/help"
			    android:src="@drawable/help_index_1326_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentRight="true"
			    android:layout_marginRight="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/help"
		        />
		    <TextView 
		        android:text="@string/help"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toLeftOf="@id/help"
			    android:layout_marginRight="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|right"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
	    </RelativeLayout>
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/love"
			    android:src="@drawable/love_31_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentLeft="true"
			    android:layout_marginLeft="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/i_like_it"
		        />
		    <TextView 
		        android:text="@string/i_like_it"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toRightOf="@id/love"
			    android:layout_marginLeft="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|left"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
		    </RelativeLayout>
	</LinearLayout>
	
    
    <LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:layout_weight="1"
	    >
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/resume"
			    android:src="@drawable/left_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentRight="true"
			    android:layout_marginRight="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/resume_game"
		        />
		    <TextView 
		        android:text="@string/resume_game"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toLeftOf="@id/resume"
			    android:layout_marginRight="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|right"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
	    </RelativeLayout>
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/back"
			    android:src="@drawable/undo_57_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentLeft="true"
			    android:layout_marginLeft="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/undo_move"
		        />
		    <TextView 
		        android:text="@string/undo_move"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toRightOf="@id/back"
			    android:layout_marginLeft="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|left"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
		    </RelativeLayout>
	</LinearLayout>
	
    
    <LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:orientation="horizontal"
	    android:layout_weight="1"
	    >
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/quit"
			    android:src="@drawable/exit_1191_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentRight="true"
			    android:layout_marginRight="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/quit"
		        />
		    <TextView 
		        android:text="@string/quit"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toLeftOf="@id/quit"
			    android:layout_marginRight="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|right"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
	    </RelativeLayout>
	    <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="0dp"
		    android:layout_height="match_parent" 
		    android:orientation="vertical"
		    android:layout_weight="1"
		    >
		    <ImageView 
				xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/newgame"
			    android:src="@drawable/restart_128"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentLeft="true"
			    android:layout_marginLeft="@dimen/icon_margin"
			    android:layout_centerVertical="true"
			    android:contentDescription="@string/new_game"
		        />
		    <TextView 
		        android:text="@string/new_game"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_toRightOf="@id/newgame"
			    android:layout_marginLeft="@dimen/text_to_icon_margin"
			    android:gravity="center_vertical|left"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearance"
				/>
		    </RelativeLayout>
	</LinearLayout>
    
</LinearLayout>